@@ -1,3 +1,9 @@
+2002-06-12  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* CompletionSocietyPlugin.java:
+	Add automatic refresh option to servlet. When enabled, client pull
+	is turned on to periodically refresh the screen.
+
 2002-06-11  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* Laggard.java:
